--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,6 @@ dependencies {
     implementation 'com.github.Flutterwave:rave-android:1.0.35'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
 
 }
