--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.overcomersprayers.app.overcomersprayers">
+    package="com.overcomersprayer.app.overcomersprayers">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--<uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.Manifest.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 
     <application
-        android:name=".application.AppApplication"
+        android:name="com.overcomersprayer.app.overcomersprayers.application.AppApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -24,21 +25,21 @@
         tools:replace="android:allowBackup">
 
         <receiver
-            android:name=".PrayerReminder"
+            android:name="com.overcomersprayer.app.overcomersprayers.PrayerReminder"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.MainActivity">
+        <activity android:name="com.overcomersprayer.app.overcomersprayers.activities.LoginActivity" />
+        <activity android:name="com.overcomersprayer.app.overcomersprayers.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PrayerHeadingActivity" />
+        <activity android:name="com.overcomersprayer.app.overcomersprayers.activities.PrayerHeadingActivity" />
 
-        <service android:name=".service.MyFirebaseMessagingService">
+        <service android:name="com.overcomersprayer.app.overcomersprayers.service.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
