parse json into expandable recyclerview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,13 +29,15 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name="com.overcomersprayer.app.overcomersprayers.activities.LoginActivity" />
-        <activity android:name="com.overcomersprayer.app.overcomersprayers.activities.MainActivity">
+        <activity android:name="com.overcomersprayer.app.overcomersprayers.activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.overcomersprayer.app.overcomersprayers.activities.MainActivity">
+
         </activity>
         <activity android:name="com.overcomersprayer.app.overcomersprayers.activities.PrayerHeadingActivity" />
 
