--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.4.0'
     api "com.google.auto.value:auto-value-annotations:1.6.2"
     annotationProcessor "com.google.auto.value:auto-value:1.6.2"
-
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     implementation('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
         transitive = true;
     }
