enable proguard to reduce apk size

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,21 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+
+//def keystorePropertiesFile = rootProject.file("keystore.properties")
+//def keystoreProperties = new Properties()
+//keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
+
 android {
+//    signingConfigs {
+//        op {
+//            keyAlias keystoreProperties['keyAlias']
+//            keyPassword keystoreProperties['keyPassword']
+//            storeFile file(keystoreProperties['storeFile'])
+//            storePassword keystoreProperties['storePassword']
+//        }
+//    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.overcomersprayers.app.overcomersprayers"
@@ -14,7 +28,9 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            //signingConfig signingConfigs.op
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
