--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ android {
 
 
 configurations {
-    all*.exclude group: 'com.google.guava', module: 'listenablefuture'
+    //all*.exclude group: 'com.google.guava', module: 'listenablefuture'
 }
 
 dependencies {
@@ -98,4 +98,5 @@ dependencies {
         transitive = true;
     }
     implementation 'com.github.javiersantos:PiracyChecker:1.2.5'
+    implementation 'androidx.work:work-runtime:2.2.0'
 }
